data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2060.wast
;; 1. **Test Description:** Define a `block` with a `blocktype` requiring an integer return, but omit the `end` instruction, causing improper nesting.     - **Constraint Checked:** Ensures correct handling of well-nested blocks, and verifies if infinite loops occur due to missing `end` instruction.     - **Infinite Loop Relation:** Missing `end` might cause reading past the block, resulting in executing unexpected code and an infinite loop.

(assert_malformed
  (module quote "(func (block (result i32) (i32.const 10))")
  "unexpected end of section or function"
)